<resources>
    <string name="app_name">Kissan Cart</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- ++++++++++++++++++++++++++ GCM ++++++++++++++++++++++ -->
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>

    <!--item list for navigation drawer-->
    <string name="nav_item_createEnquiry">Create Enquiry</string>
    <string name="nav_item_viewEnquiry">View Enquiry</string>
    <string name="nav_item_createOrder">Create Order</string>
    <string name="nav_item_viewOrder">Order</string>
    <string name="nav_item_newReply">New Enquiry</string>
    <string name="nav_item_createSociety">Create Society</string>
    <string name="nav_item_OBP">OBP</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_enquiry">Enquiry</string>
    <string name="nav_society">Society</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_vendor">Vendor</string>
    <!--item list for navigation drawer-->

    <!--all hints-->
    <string name="hint_ref_no">Reference Number</string>
    <string name="hint_society_contact">Society Contact</string>
    <string name="hint_society_email">Society Email</string>
    <string name="hint_society_address">Society Address</string>
    <string name="hint_enquiry_message">Enquiry Message</string>
    <string name="hint_order_utr">UTR</string>
    <string name="hint_order_item_name">Item Name</string>
    <string name="hint_order_item_qty">Quantity</string>
    <string name="hint_order_item_price">Price</string>
    <string name="hint_order_item_total_amt">Total Amount</string>
    <string name="hint_society_name">Society Name</string>
    <string name="hint_obp_name">OBP Name</string>
    <string name="hint_obp_contact">OBP Contact</string>
    <string name="hint_obp_email">OBP Email</string>
    <string name="hint_obp_pwd">OBP Password</string>
    <string name="hint_obp_address">OBP Address</string>
    <string name="hint_obp_store_name">Store Name</string>
    <string name="hint_obp_pin">Pincode</string>
    <string name="hint_obp_city">City</string>
    <string name="hint_obp_state">State</string>
    <string name="hint_obp_country">Country</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_image_name">Image Name</string>
    <string name="hint_product_quantity">Product Quantity</string>
    <string name="hint_vendor_name">Vendor Name</string>
    <string name="hint_vendor_contact">Vendor Contact</string>
    <string name="hint_vendor_address">Vendor Address</string>
    <string name="hint_vendor_email">Vendor Email</string>
    <!--all hints-->

    <string name="sharedPrefrence">info.alchemistdigital.kissan_cart</string>
    <string name="login">Login</string>
    <string name="upload_enquiry">Upload Enquiry</string>
    <string name="choose_file">Choose File: </string>
    <string name="submit">submit</string>
    <string name="create_item">Create Item</string>
    <string name="network_error_message">Internet Connection Error</string>
    <string name="no_society_found">Click on me for creating society.</string>
    <string name="btn_login">Login</string>
    <string name="userType">user_type</string>
    <string name="boolean_login_sharedPref">BooloanLoginSharedPref</string>
    <string name="loginName">login_name</string>
    <string name="loginEmail">login_email</string>
    <string name="adminUserId">admin_userId</string>
    <string name="userId">userId</string>
    <string name="title_activity_admin_panel">Admin Panel</string>
    <string name="title_select_society">Select society - </string>
    <string name="title_select_group">Select group - </string>
    <string name="title_select_category_spinner">Select category - </string>
    <string name="title_select_subcategory">Select subcategory - </string>
    <string name="title_select_product_name">Select product name - </string>
    <string name="title_product_quantity">Product Quantity - </string>
    <string name="sharedPreference_filepath">preference_filepath</string>
    <string name="bool_scan_image">is_scan_file</string>
    <string name="empty_enquiry_message">No enquiry registered.</string>
    <string name="empty_order_message">No order registered.</string>
    <string name="empty_enquiry_reply_message">No new enquiry reply.</string>
    <string name="empty_no_enquiry_for_order">Please register enquiry to generate order.</string>
    <string name="view">View</string>
    <string name="reply">Reply</string>
    <string name="refString">REF%1$s</string>
    <string name="createNewItem">Create New Item</string>
    <string name="enquiryDetail">Enquiry Detail</string>
    <string name="newReply">New Enquiry</string>
    <string name="viewOrders">View Orders</string>
    <string name="viewSocietyDetails">View Societies</string>
    <string name="orderDetails">Order Detail</string>
    <string name="createItem">Create Item</string>
    <string name="Rs">\u20B9</string>
    <string name="emptyItemErrorMsg">No item created.</string>
    <string name="empty_society_message">No society found.</string>
    <string name="utrNumber">UTR number</string>
    <string name="societyDetails">Society Detail</string>
    <string name="obpDetails">OBP Detail</string>
    <string name="viewSociety">View Society</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="editSocietyDetails">Edit Society</string>
    <string name="viewEnquiry">View</string>
    <string name="replyEnquiry">Reply</string>
    <string name="viewObpList">View OBP\'s</string>
    <string name="createOBP">Create OBP</string>
    <string name="empty_OBP_message">No obp registered.</string>
    <string name="details">Details</string>
    <string name="viewObpDetails">OBP Details</string>
    <string name="editObpDetails">Edit OBP</string>
    <string name="vendorDetails">Vendors</string>
    <string name="empty_vendor_message">No vendor registered.</string>
    <string name="createVendor">Create Vendor</string>
    <string name="singleVendorDetails">Vendor Details</string>
    <string name="editVendor">Edit Vendor</string>
    <string name="title_activity_home">HomeActivity</string>

</resources>
