<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <RelativeLayout
                android:id="@+id/ids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/societyDetails"
                    android:textColor="@color/mdtp_done_text_color"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/closeSocietyDetailsAlert"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_delete"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/hint_society_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_id_inOrderDetails_society_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="left"
                android:paddingBottom="5sp"
                android:background="@drawable/light_gray_borderbottom"
                android:textColor="@color/mdtp_date_picker_text_highlighted"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/hint_society_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_id_inOrderDetails_society_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="left"
                android:paddingBottom="5sp"
                android:background="@drawable/light_gray_borderbottom"
                android:textColor="@color/mdtp_date_picker_text_highlighted"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/hint_society_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_id_inOrderDetails_society_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="left"
                android:paddingBottom="5sp"
                android:background="@drawable/light_gray_borderbottom"
                android:textColor="@color/mdtp_date_picker_text_highlighted"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/hint_society_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_id_inOrderDetails_society_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="left"
                android:paddingBottom="5sp"
                android:background="@drawable/light_gray_borderbottom"
                android:textColor="@color/mdtp_date_picker_text_highlighted"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>