<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.alchemistdigital.kissan.activities.Edit_Obp_Details">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/MyMaterialTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/edit_obp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/MyMaterialTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/edittext_id_edit_obp_name"
                        android:hint="@string/hint_obp_name" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/edittext_id_edit_obp_contact"
                        android:maxLength="10"
                        android:hint="@string/hint_obp_contact" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/edittext_id_edit_obp_email"
                        android:hint="@string/hint_obp_email" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/edittext_id_edit_obp_pwd"
                        android:hint="@string/hint_obp_pwd" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:id="@+id/edittext_id_edit_obp_address"
                        android:hint="@string/hint_obp_address" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_store_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/edittext_id_edit_obp_store_name"
                        android:hint="@string/hint_obp_store_name" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6"
                        android:id="@+id/edittext_id_edit_obp_pin"
                        android:hint="@string/hint_obp_pin" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/edittext_id_edit_obp_city"
                        android:hint="@string/hint_obp_city" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/edittext_id_edit_obp_state"
                        android:hint="@string/hint_obp_state" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_input_layout_edit_obp_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/edittext_id_edit_obp_country"
                        android:hint="@string/hint_obp_country" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="5sp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <com.andexert.library.RippleView
                    android:id="@+id/btn_id_edit_obp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    ripple:rv_centered="true"
                    ripple:rv_zoom="true"
                    ripple:rv_rippleDuration="200"
                    ripple:rv_zoomScale="1.1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorWhite"
                        android:text="@string/edit" />

                </com.andexert.library.RippleView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
