<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_xmlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/create_login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/MyMaterialTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ripple="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/login_email"
                android:hint="@string/hint_email"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/login_password"
                android:hint="@string/hint_password"/>

        </android.support.design.widget.TextInputLayout>

        <com.andexert.library.RippleView
            android:id="@+id/ripplebtn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ripple:rv_centered="true"
            android:layout_below="@+id/book"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="0dp"
            android:layout_marginTop="40dp"
            ripple:rv_zoom="true"
            ripple:rv_rippleDuration="200"
            ripple:rv_zoomScale="1.1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/btn_login"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite" />

        </com.andexert.library.RippleView>

        <!--<TextView
            android:id="@+id/idForgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="forgot password ?"
            android:layout_marginTop="20dp"
            android:background="@drawable/borderbottom"
            android:textSize="18dp" />-->
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>